--- a/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/serial-number/serial-number.component.scss
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/serial-number/serial-number.component.scss
@@ -10,6 +10,10 @@
   min-height: 84vh;
   overflow: auto;
 }
+.example-full-width {
+  width: 100%;
+  color: black;
+}
 
 .mat-paginator-sticky {
   bottom: 0px;
