fix(rma-frontend): some field add in details card

--- a/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/serial-number/serial-number.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty-tabs/serial-number/serial-number.component.html
@@ -219,7 +219,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="serial_no"
+              placeholder="Serial no"
               readonly
               [(ngModel)]="selected_serial_no.serial_no"
             />
@@ -229,7 +229,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="item_code"
+              placeholder="Item Code"
               readonly
               [(ngModel)]="selected_serial_no.item_code"
             />
@@ -241,7 +241,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="delivery time"
+              placeholder="Delivery Time"
               readonly
               [(ngModel)]="selected_serial_no.delivery_time"
             />
@@ -309,7 +309,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="serial_no"
+              placeholder="Serial no"
               readonly
               [(ngModel)]="selected_serial_no.serial_no"
             />
@@ -319,7 +319,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="item_code"
+              placeholder="Item Code"
               readonly
               [(ngModel)]="selected_serial_no.item_code"
             />
@@ -331,7 +331,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="delivery time"
+              placeholder="Delivery Time"
               readonly
               [(ngModel)]="selected_serial_no.delivery_time"
             />
