--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -102,6 +102,21 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none">
+            <ion-label position="floating">Balance</ion-label>
+            <ion-input
+              readonly="true"
+              type="string"
+              value="{{
+                salesInvoiceDetails?.address_display
+                  ? salesInvoiceDetails.address_display
+                  : ''
+              }}"
+              placeholder="Balance"
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item lines="none">
             <ion-label position="floating">Due Date</ion-label>
             <ion-datetime
               readonly
@@ -115,9 +130,18 @@
             ></ion-datetime>
           </ion-item>
         </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col>
           <ion-item lines="none">
-            <ion-label position="floating">Contact</ion-label>
+            <ion-label position="floating">Branch</ion-label>
+            <ion-input readonly="true" type="text" placeholder="Branch">
+            </ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item lines="none">
+            <ion-label position="floating">Warehouse</ion-label>
             <ion-input
               readonly="true"
               type="text"
@@ -126,7 +150,7 @@
                   ? salesInvoiceDetails.contact_display
                   : ''
               }}"
-              placeholder="Contact"
+              placeholder="Warehouse"
             ></ion-input>
           </ion-item>
         </ion-col>
