--- a/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/item-price/item-price.page.html
@@ -68,10 +68,30 @@
         <!-- Price Column -->
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef>Price</th>
-          <td mat-cell *matCellDef="let row">
+          <td
+            class="ion-text-right"
+            mat-cell
+            *matCellDef="let row"
+            [satPopoverAnchor]="p"
+            tabindex="0"
+            (keyup.enter)="p.open()"
+            (click)="p.open()"
+          >
             <ion-text>
-              {{row.minimumPrice}}
+              {{row.minimumPrice | curFormat | async}}
             </ion-text>
+            <sat-popover
+              #p
+              hasBackdrop
+              xAlign="start"
+              yAlign="start"
+              (closed)="updateMinPrice(row, $event)"
+            >
+              <edit-price
+                [value]="row.minimumPrice"
+                column="price"
+              ></edit-price>
+            </sat-popover>
           </td>
         </ng-container>
 
