--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -33,11 +33,19 @@
               <ion-icon slot="start" name="list-box"></ion-icon>
               <ion-label>Sales</ion-label>
             </ion-item>
+            <ion-item *ngIf="loggedIn" routerLink="/purchase" lines="none">
+              <ion-icon slot="start" name="basket"></ion-icon>
+              <ion-label>Purchase</ion-label>
+            </ion-item>
             <ion-item *ngIf="loggedIn" routerLink="/warranty" lines="none">
               <ion-icon slot="start" name="repeat"></ion-icon>
               <ion-label>Warranty</ion-label>
             </ion-item>
-            <ion-item *ngIf="loggedIn && showSettings" routerLink="/settings" lines="none">
+            <ion-item
+              *ngIf="loggedIn && showSettings"
+              routerLink="/settings"
+              lines="none"
+            >
               <ion-icon slot="start" name="settings"></ion-icon>
               <ion-label>Settings</ion-label>
             </ion-item>
